Started working on MapElitesTrajectoryDrawer.